# customizable-contraction-hierarchies

./: .gitignore  LICENSE  README.md
optimizedkit/: CMakeLists.txt  README.md
optimizedkit/docs/: Doxyfile
optimizedkit/docs/html/: annotated.html  bi__directional__dijkstra_8tpp.html  binary__min__heap_8tpp.html  classInputValidator-members.html  classInputValidator.html  classes.html  customizable__contraction__hierarchies_8cpp.html  customizable__contraction__hierarchy__query_8tpp.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_47ccbe5f96dcd0f36c4627e2a9b67ecd.html  dir_62afd65db23a7b9f0a3e266dd1f617f8.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d182250f0c231765fc862e69db210731.html  dir_f4b03f49f10aacc3af73521050801de6.html  dir_f973bb6d188d8e0b1fcd77c166495f44.html  files.html  functions.html  functions_func.html  graph_8cpp.html  graph_8tpp.html  index.html  input__validator_8cpp.html  input__validator_8hpp.html  input__validator_8hpp_source.html  utils_8cpp.html
optimizedkit/docs/html/search/: all_0.js  all_2.js  classes_0.js  files_1.js  functions_0.js  searchdata.js
optimizedkit/docs/latex/: annotated.tex  bi__directional__dijkstra_8tpp.tex  binary__min__heap_8tpp.tex  classInputValidator.tex  customizable__contraction__hierarchies_8cpp.tex  customizable__contraction__hierarchy__query_8tpp.tex  dir_313caf1132e152dd9b58bea13a4052ca.tex  dir_47ccbe5f96dcd0f36c4627e2a9b67ecd.tex  dir_62afd65db23a7b9f0a3e266dd1f617f8.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d182250f0c231765fc862e69db210731.tex  dir_f4b03f49f10aacc3af73521050801de6.tex  dir_f973bb6d188d8e0b1fcd77c166495f44.tex  doxygen.sty  etoc_doxygen.sty  files.tex  graph_8cpp.tex  graph_8tpp.tex  input__validator_8cpp.tex  input__validator_8hpp.tex  input__validator_8hpp_source.tex  longtable_doxygen.sty  refman.tex  tabu_doxygen.sty  utils_8cpp.tex
optimizedkit/examples/: exampleHelper.cpp  exampleHelper.hpp  example_optimizedkit_osm_map_routing.cpp
optimizedkit/include/customizable_contraction_hierarchy/: cch_customizer.hpp  cch_preprocessor.hpp  cch_query.hpp  cch_triangle_enumeration.hpp  customizable_contraction_hierarchy.hpp
optimizedkit/include/graph/: cch_graph.hpp  graph.hpp
optimizedkit/include/graph_order_algorithms/: dinic_min_cut.hpp  nested_dissection_inertial_flow_order.hpp  random_order.hpp
optimizedkit/include/map/: coordinate_to_vertex_mapper.hpp  csv_reader.hpp
optimizedkit/include/path_finding_algorithms/: bi_directional_dijkstra.hpp  dijkstra.hpp
optimizedkit/include/priority_queues/: abstract_heap.hpp  binary_min_heap.hpp  pairing_min_heap.hpp
optimizedkit/include/utils/: constants.hpp  enums.hpp  graph_helper.hpp  id_mapper.hpp  math.hpp  permutation.hpp  types.hpp  vector_helper.hpp
optimizedkit/src/customizable_contraction_hierarchy/: cch_customizer.tpp  cch_preprocessor.cpp  cch_query.tpp  cch_triangle_enumeration.tpp  customizable_contraction_hierarchy.tpp
optimizedkit/src/graph/: cch_graph.tpp  graph.cpp
optimizedkit/src/graph_order_algorithms/: dinic_min_cut.tpp  nested_dissection_inertial_flow_order.tpp  random_order.tpp
optimizedkit/src/map/: coordinate_to_vertex_mapper.cpp  csv_reader.cpp
optimizedkit/src/path_finding_algorithms/: bi_directional_dijkstra.tpp  dijkstra.tpp
optimizedkit/src/priority_queues/: binary_min_heap.tpp  pairing_min_heap.tpp
optimizedkit/src/utils/: graph_helper.cpp  id_mapper.cpp  permutation.cpp  permutation.tpp  vector_helper.tpp
optimizedkit/tests/: CMakeLists.txt
optimizedkit/tests/customizable_contraction_hierarchy/: cch_customizer_test.cpp  cch_example_gen_test.cpp  cch_preprocessor_test.cpp  cch_query_test.cpp  cch_triangle_enumeration_test.cpp  customizable_contraction_hierarchy_test.cpp
optimizedkit/tests/graph/: csv_reader_test.cpp  graph_test.cpp
optimizedkit/tests/graph_order_algorithms/: dinic_min_cut_test.cpp  nested_dissection_order_test.cpp
optimizedkit/tests/map/: coordinate_to_vertex_mapper_test.cpp
optimizedkit/tests/path_finding_algorithms/: bi_directional_dijkstra_test.cpp
optimizedkit/tests/priority_queues/: binary_min_heap_test.cpp  pairing_min_heap_test.cpp
optimizedkit/tests/test_data/: munich_vertices.csv
optimizedkit/tests/test_data/example_graph/: first_out  head  ifco  latitude  longitude  tail  weight
optimizedkit/tests/test_utils/: utils.hpp
optimizedkit/tests/utils/: id_mapper_test.cpp  math_test.cpp  permutation_test.cpp  vector_helper_test.cpp
